# RenTauri

./: .gitignore  README.md  cname.sh  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ios.yml
src/: main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: aeskey.rs  decrypt.rs  lib.rs  main.rs  parser.rs  util.rs
src/store/: backend-local.ts  backend-tauri.ts
src/styles/: index.css  reset.css
